@@ -1,4 +1,11 @@
 ---
+
+* [Bug 1561] ntpq, ntpdc "passwd" prompts for MD5 password w/SHA1.
+* Windows port: do not exit in ntp_timestamp_from_counter() without
+  first logging the reason.
+* Support "passwd blah" syntax in ntpq.
+
+---
 (4.2.6p2-RC4) 2010/05/19 Released by Harlan Stenn <stenn@ntp.org>
 
 * [Bug 1555] 4.2.6p2-RC3 sntp illegal C (mixed code and declarations).
